--- a/style.css
+++ b/style.css
@@ -48,11 +48,9 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
 }
 
 .imagem {
-    max-height: 92px;
     max-height: 100%;
     max-width: 100%;
     margin-top: auto;
@@ -60,7 +58,6 @@ header {
 
 
 form {
-    width: auto;
     max-width: 584px;
     background: #fff;
     border: 1px solid #dfe1e5;
@@ -100,9 +97,7 @@ form:hover {
     width: 20px;
     height: 20px;
     border: none;
-    background: transparent;
-    background-image: none;
-    background-image: url(https://img.icons8.com/android/24/000000/search.png);
+    background: transparent url(https://img.icons8.com/android/24/000000/search.png);
     background-size: contain;
     cursor: pointer;
 }
@@ -112,9 +107,7 @@ form:hover {
     width: 25px;
     height: 25px;
     border: none;
-    background: transparent;
-    background-image: none;
-    background-image: url(https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png);
+    background: transparent url(https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png);
     background-size: contain;
     cursor: pointer;
 }
